# AunSync

./: BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README-en.md  README.md  THIRD_PARTY_NOTICES  build.bat  build.env.sample
.agents/skills/mvvm-architecture/: SKILL.md
.claude/commands/: release-tag.md
.github/: dependabot.yml
.github/workflows/: build-test.yml  build.yml  cache-obs.yml
data/locale/: en-US.ini  ja-JP.ini
docs/: architecture-mvvm.md  ci-obs-version-pinning.md  live-performance.md  receiver-audio-pipeline.md  time-data-structures-uml.md
receiver/: package-lock.json  package.json
receiver/src/: audio-ring.ts  audio.ts  connection.ts  opus.ts  playback-worklet.js  ui.ts
src/: CLAUDE.md
src/audio/: audio-processor.cpp
src/core/: constants.hpp
src/model/: delay-state.hpp  settings-repo.hpp
src/network/: rtsp-e2e-prober.cpp  stream-router.cpp
src/plugin/: plugin-config.cpp  plugin-config.hpp  plugin-helpers.cpp  plugin-helpers.hpp  plugin-main.cpp  plugin-settings.cpp  plugin-settings.hpp  plugin-state.hpp  plugin-utils.cpp  plugin-utils.hpp  release-check.cpp
src/ui/: properties-builder.cpp  properties-builder.hpp  properties-delay.cpp  properties-delay.hpp  props-refresh.cpp
src/viewmodel/: delay-viewmodel.hpp
src/widgets/: delay-diagram-widget.cpp  delay-diagram-widget.hpp  help-callout-widget.cpp  help-callout-widget.hpp  widget-inject-utils.hpp
